# shifter-jupyterlab

./: .editorconfig  .gitignore  .gitmodules  .pre-commit-config.yaml  .prettierignore  .wikidata-cache.json  CHANGELOG.md  README.md  TODO  Untitled3.ipynb  bp.ipynb  bp_single.ipynb  energy-consumption.ipynb  energy-consumption.yaml  gdp_co2.ipynb  gdp_co2.yaml  multi.ipynb  one.ipynb  petrol_production_region.ipynb  pib_co2.ipynb  pib_co2_full.ipynb  pib_co2_full_swiss.ipynb  population.ipynb  pyproject.toml  requirements.txt  swiss-energy-generation-consumption.ipynb  swiss-energy.ipynb  swiss-energy.yaml  swiss-mobility-carburan-canton.ipynb  swiss-mobility-carburan.ipynb  swiss-mobility-engine.ipynb  swiss-mobility-engine.yaml  worldindata.ipynb
.github/: renovate.json5
better-index/: energy-consumption-fraction-swiss.html  energy-consumption-fraction-world.html  energy-consumption-swiss.html  energy-consumption-world.html  gdp_co2_world.html  index.html  swiss-energy-fraction.html  swiss-energy.html  swiss-mobility-engine.html
bigger-plots/: energy-consumption-fraction-swiss.html  energy-consumption-fraction-world.html  energy-consumption-swiss.html  energy-consumption-world.html  gdp_co2_world.html  swiss-energy-fraction.html  swiss-energy.html  swiss-mobility-engine.html
ci/: config.yaml  energy-consumption-fraction-swiss.html  energy-consumption-fraction-world.html  energy-consumption-swiss.html  energy-consumption-world.html  gdp_co2_world.html  index.html  requirements.txt  swiss-energy-fraction.html  swiss-energy.html  swiss-mobility-engine.html
conventional-commits/: energy-consumption-fraction-swiss.html  energy-consumption-fraction-world.html  energy-consumption-swiss.html  energy-consumption-world.html  gdp_co2_world.html  index.html  swiss-energy-fraction.html  swiss-energy.html  swiss-mobility-engine.html
conventional-commits@/: energy-consumption-fraction-swiss.html  energy-consumption-fraction-world.html  energy-consumption-swiss.html  energy-consumption-world.html  gdp_co2_world.html  index.html  swiss-energy-fraction.html  swiss-energy.html  swiss-mobility-engine.html
master/: energy-consumption-fraction-swiss.html  energy-consumption-fraction-world.html  energy-consumption-swiss.html  energy-consumption-world.html  gdp_co2_world.html  index.html  swiss-energy-fraction.html  swiss-energy.html  swiss-mobility-engine.html
other-conventional-commit-check/: energy-consumption-fraction-swiss.html  energy-consumption-fraction-world.html  energy-consumption-swiss.html  energy-consumption-world.html  gdp_co2_world.html  index.html  swiss-energy-fraction.html  swiss-energy.html  swiss-mobility-engine.html
poerty/: energy-consumption-fraction-swiss.html  energy-consumption-fraction-world.html  energy-consumption-swiss.html  energy-consumption-world.html  gdp_co2_world.html  index.html  swiss-energy-fraction.html  swiss-energy.html  (+1 more)
(+34 files in other folders)
