[tool.ruff]
target-version = "py310"
line-length = 110

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.poetry]
version = '0.0.0'

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
jupyterlab = "4.4.10"
plotly = "6.4.0"
dash = "2.18.2"
shifter-pandas = "1.0.3"
pandas = "2.3.3"
statsmodels = "0.14.5"
jupyter-dash = "0.4.2"
jupyter-core = "5.9.1"
certifi = "2025.11.12"
flask = "3.1.2"
tornado = "6.5.2"
requests = "2.32.5"
urllib3 = "2.5.0"
jupyter-server = "2.17.0"
jinja2 = "3.1.6"
idna = "3.11"
python-json-logger = "4.0.0"

[project]
classifiers = [
    'Programming Language :: Python',
    'Programming Language :: Python :: 3',
    'Programming Language :: Python :: 3.10',
    'Programming Language :: Python :: 3.11',
    'Programming Language :: Python :: 3.12',
    'Programming Language :: Python :: 3.13',
]
dynamic = ["dependencies", "version"]
name = 'shifter-jupyterlab'
description = 'Not used'
requires-python = ">=3.10"
