[tool.ruff]
target-version = "py310"
line-length = 110

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.poetry]
version = '0.0.0'

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
jupyterlab = "4.4.8"
plotly = "6.0.0"
dash = "3.4.0"
shifter-pandas = "1.0.3"
pandas = "2.2.3"
statsmodels = "0.14.4"
jupyter-dash = "0.4.2"
jupyter-core = "5.8.1"
certifi = "2026.1.4"
flask = "3.0.3"
tornado = "6.5"
requests = "2.32.4"
urllib3 = "2.6.3"
jupyter-server = "2.14.2"
jinja2 = "3.1.6"
idna = "3.10"
python-json-logger = "4.0.0"

[project]
classifiers = [
    'Programming Language :: Python',
    'Programming Language :: Python :: 3',
    'Programming Language :: Python :: 3.10',
    'Programming Language :: Python :: 3.11',
    'Programming Language :: Python :: 3.12',
]
dynamic = ["dependencies", "version"]
name = 'shifter-jupyterlab'
description = 'Not used'
requires-python = ">=3.10"
